--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "html-to-image": "^1.11.11",
     "nanoid": "^4.0.1",
     "openai": "^3.2.1",
+    "theme-change": "^2.5.0",
+    "vue-clipboard3": "^2.0.0",
     "vue3-markdown-it": "^1.0.10"
   }
 }
